build/k8s/prod/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forya-fe
spec:
  replicas: 3
