build/k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forya-be
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.forya.example.com
      secretName: forya-be-tls
  rules:
    - host: api.forya.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forya-be
                port:
                  number: 80
